Fixing hero header on mobile

--- a/src/scss/components/Hero/_Hero.scss
+++ b/src/scss/components/Hero/_Hero.scss
@@ -8,7 +8,7 @@
 
     &__h1 {
       font-weight: 700;
-      font-size: 2rem;
+      font-size: 10vw;
 
       span {
         @include text-gradient--primary;
